--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "payriff-backend",
   "version": "1.0.0",
-  "description": "Payriff backend + webhook signature check",
+  "description": "Payriff backend + webhook signature",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
