--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "Payriff backend - serverless for Vercel",
   "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "vercel dev"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
